# cpp-console-game

./: CMakeLists.txt  README.md
conio/: CMakeLists.txt  conio.cpp  conio.hpp
cpp-console-game/: Board.cpp  Board.hpp  CMakeLists.txt  GameClient.cpp  GameClient.hpp  GameServer.cpp  GameServer.hpp  GameState.cpp  GameState.hpp  Player.cpp  Player.hpp  main.cpp
eRPC/: CMakeLists.txt  Client.cpp  Client.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp  Server.cpp  Server.hpp
random-utils/: CMakeLists.txt  RandomUtils.cpp  RandomUtils.hpp
